# pini

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  cli.py  config.json.example  main.py  main.sh  pyproject.toml  requirements.txt
.github/workflows/: release.yaml
setup/: django.py  django_rest_framework.py  fastapi.py  nextjs.py
src/pini/: cli.py
src/pini/setup/: fastapi.py
src/pini/templates/pyproject/: package.toml
src/pinit/: cli.py  config.py
src/pinit/setup/: django.py  django_rest_framework.py  fastapi.py  nextjs.py  python_base.py  react_vite.py
stacks/: django.sh  drf.sh  fastapi.sh  next.sh  python-simple.sh  reactvite.sh
templates/issues/: feature_request.yaml
templates/pre-commit/: js.yaml
