[project]
name = "pinit"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0",
    "toml>=0.10.2",
    "typer>=0.16.0",
]


[project.scripts]
pinit = "pinit.cli:app"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pinit" = ["templates/**/*"] # Include all files recursively in 'templates' directory within 'pinit' package

[dependency-groups]
dev = [
    "black>=25.1.0",
    "commitizen>=4.8.2",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
]

[tool.black]
line-length =  79

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]  # For compatibility with Black (optional)

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true


